<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorWhite"
>

   <TextView
           android:id="@+id/title_left"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:layout_gravity="left"
           android:layout_marginLeft="20dp"
           android:text="@string/hello_user"
           android:textColor="@color/colorBlack"
           android:textSize="18dp" />

   <TextView
           android:id="@+id/name_user"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignTop="@+id/title_left"
           android:layout_gravity="left"
           android:layout_marginLeft="80dp"
           android:layout_marginTop="0dp"
           android:text="Cashier001"
           android:textColor="@color/colorBlack"
           android:textSize="18dp" />


</RelativeLayout>

   <LinearLayout
           android:background="@color/colorWhite"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:orientation="vertical">

      <Button
              android:id="@+id/deposit_btn"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:text="@string/deposit"/>

      <Button
              android:id="@+id/open_btn"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:text="@string/open_app"/>


      <Button
              android:id="@+id/test_btn"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:text="ประวัติ"/>

      <Button

              android:id="@+id/manage_btn"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:text="@string/manage_user"/>

      <Button
              android:id="@+id/test_system"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:text="@string/test_systems"/>

      <Button
              android:id="@+id/img_setting"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:text="@string/menu_setting"/>

      <Button
              android:id="@+id/reset_pass_btn"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:text="@string/reset_password"/>


   </LinearLayout>





</LinearLayout>