<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorWhite">

   <TextView
           android:id="@+id/title_left"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:layout_gravity="left"
           android:layout_marginLeft="20dp"
           android:text="@string/hello_user"
           android:textColor="@color/colorBlack"
           android:textSize="18dp" />

   <TextView
           android:id="@+id/name_user"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignTop="@+id/title_left"
           android:layout_gravity="left"
           android:layout_marginLeft="80dp"
           android:layout_marginTop="0dp"
           android:text="Cashier001"
           android:textColor="@color/colorBlack"
           android:textSize="18dp" />


</RelativeLayout>

<LinearLayout
        android:layout_below="@+id/layout_title"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:gravity="center"
        android:orientation="vertical">

   <ImageView
           android:id="@+id/img_setting"
           android:layout_margin="5dp"
           android:layout_gravity="end"
           android:layout_weight="0"
           android:src="@drawable/ic_action_setting"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

   <Button
           android:id="@+id/deposit_btn"
           android:layout_width="170dp"
           android:layout_height="80dp"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:text="@string/deposit" />

   <Button
           android:visibility="gone"
           android:id="@+id/open_btn"
           android:layout_width="170dp"
           android:layout_height="80dp"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:text="@string/open_app" />


   <Button
           android:id="@+id/test_btn"
           android:layout_width="170dp"
           android:layout_height="80dp"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:text="ประวัติ" />

   <Button

           android:visibility="gone"
           android:id="@+id/manage_btn"
           android:layout_width="170dp"
           android:layout_height="80dp"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:text="@string/manage_user" />

   <Button
           android:id="@+id/test_system"
           android:layout_width="170dp"
           android:layout_height="80dp"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:text="@string/test_systems"/>

   <Button
           android:id="@+id/reset_pass_btn"
           android:layout_width="170dp"
           android:layout_height="80dp"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:text="@string/reset_password" />


</LinearLayout>





</RelativeLayout>