<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorWhite"
>

   <TextView
           android:id="@+id/title_left"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:layout_gravity="left"
           android:layout_marginLeft="20dp"
           android:text="@string/hello_user"
           android:textColor="@color/colorBlack"
           android:textSize="18dp" />

   <TextView
           android:id="@+id/name_user"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignTop="@+id/title_left"
           android:layout_gravity="left"
           android:layout_marginLeft="80dp"
           android:layout_marginTop="0dp"
           android:text="Cashier001"
           android:textColor="@color/colorBlack"
           android:textSize="18dp" />


</RelativeLayout>

   <LinearLayout
           android:background="@color/colorWhite"
           android:layout_width="match_parent"
           android:layout_height="600dp"
           android:gravity="center"
           android:orientation="vertical">

      <Button
              android:id="@+id/test_internet"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:text="@string/test_internet"/>

      <Button
              android:id="@+id/test_printer"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:text="@string/test_printer"/>

      <Button
          android:id="@+id/time_btn"
          android:layout_width="170dp"
          android:layout_height="80dp"
          android:gravity="center"
          android:layout_marginTop="10dp"
          android:text="ตั้งวัน-เวลา"/>


      <Button
              android:id="@+id/back_btn"
              android:layout_width="170dp"
              android:layout_height="80dp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:text="กลับ"/>



   </LinearLayout>





</LinearLayout>